// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelMarkUnreadNotificationSection should match snapshot on server error 1`] = `
<SettingItemMin
  describe={
    <FormattedMessage
      defaultMessage="For all unread messages"
      id="channel_notifications.allUnread"
      values={Object {}}
    />
  }
  section=""
  title={
    <FormattedMessage
      defaultMessage="Mark Channel Unread"
      id="channel_notifications.markUnread"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelMarkUnreadNotificationSection should match snapshot when getDescribe is called 1`] = `
<FormattedMessage
  defaultMessage="For all unread messages"
  id="channel_notifications.allUnread"
  values={Object {}}
/>
`;

exports[`components/ChannelMarkUnreadNotificationSection should match snapshot when getDescribe is called 2`] = `
<FormattedMessage
  defaultMessage="For all unread messages"
  id="channel_notifications.allUnread"
  values={Object {}}
/>
`;

exports[`components/ChannelMarkUnreadNotificationSection should match snapshot, expanded view, member notification to all 1`] = `
<SettingItemMax
  extraInfo={
    <span>
      <FormattedMessage
        defaultMessage="The channel name is bolded in the sidebar when there are unread messages. Selecting \\"Only for mentions\\" will bold the channel only when you are mentioned."
        id="channel_notifications.unreadInfo"
        values={Object {}}
      />
    </span>
  }
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={true}
              id="channelUnreadAll"
              name="markUnreadLevel"
              onChange={[Function]}
              type="radio"
              value="all"
            />
            <FormattedMessage
              defaultMessage="For all unread messages"
              id="channel_notifications.allUnread"
              values={Object {}}
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelUnreadMentions"
              name="markUnreadLevel"
              onChange={[Function]}
              type="radio"
              value="mention"
            />
            <FormattedMessage
              id="channel_notifications.onlyMentions"
              values={Object {}}
            />
          </label>
          <br />
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  server_error=""
  submit={[Function]}
  title={
    <FormattedMessage
      defaultMessage="Mark Channel Unread"
      id="channel_notifications.markUnread"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelMarkUnreadNotificationSection should match snapshot, expanded view, member notification to mention 1`] = `
<SettingItemMax
  extraInfo={
    <span>
      <FormattedMessage
        defaultMessage="The channel name is bolded in the sidebar when there are unread messages. Selecting \\"Only for mentions\\" will bold the channel only when you are mentioned."
        id="channel_notifications.unreadInfo"
        values={Object {}}
      />
    </span>
  }
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelUnreadAll"
              name="markUnreadLevel"
              onChange={[Function]}
              type="radio"
              value="all"
            />
            <FormattedMessage
              defaultMessage="For all unread messages"
              id="channel_notifications.allUnread"
              values={Object {}}
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={true}
              id="channelUnreadMentions"
              name="markUnreadLevel"
              onChange={[Function]}
              type="radio"
              value="mention"
            />
            <FormattedMessage
              id="channel_notifications.onlyMentions"
              values={Object {}}
            />
          </label>
          <br />
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  server_error=""
  submit={[Function]}
  title={
    <FormattedMessage
      defaultMessage="Mark Channel Unread"
      id="channel_notifications.markUnread"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelMarkUnreadNotificationSection should match snapshot, not expanded view, member notification default to all 1`] = `
<SettingItemMin
  describe={
    <FormattedMessage
      defaultMessage="For all unread messages"
      id="channel_notifications.allUnread"
      values={Object {}}
    />
  }
  section=""
  title={
    <FormattedMessage
      defaultMessage="Mark Channel Unread"
      id="channel_notifications.markUnread"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelMarkUnreadNotificationSection should match snapshot, not expanded view, member notification to mention 1`] = `
<SettingItemMin
  describe={
    <FormattedMessage
      id="channel_notifications.onlyMentions"
      values={Object {}}
    />
  }
  section=""
  title={
    <FormattedMessage
      defaultMessage="Mark Channel Unread"
      id="channel_notifications.markUnread"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;
